--- a/frontend/src/components/ProfileCard/ProfileCard.css
+++ b/frontend/src/components/ProfileCard/ProfileCard.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     position: relative;
     gap: 1rem;
+    overflow-x: clip;
+    background-color: var(--cardColor);
 }
 
 .ProfilecardImages{
@@ -26,4 +28,70 @@
     position: absolute;
     bottom: -3rem;
     box-shadow: var(--profileShadow);
+}
+
+.ProfileName{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.ProfileName>span:nth-of-type(1){
+    font-weight: bold;
+}
+
+.FollowStatus{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.75rem;
+    
+}
+
+.FollowStatus>hr{
+    width: 85%;
+    border: 1px solid var(--hrColor);
+}
+
+
+.FollowStatus>div{
+display: flex;
+justify-content: space-around;
+align-items: center;
+width: 80%;
+gap: 1rem;
+}
+
+.follow{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4rem;
+}
+
+.follow>span:nth-of-type(1){
+    color: var(--gray);
+}
+.follow>span:nth-of-type(2){
+    color: var(--gray);
+    font-size: 13px;
+}
+.vl{
+    height: 150%;
+ 
+    border-left: 2px solid var(--hrColor);
+}
+
+.ProfileCard>span{
+    color: orange;
+    font-weight: bold;
+    align-self: center;
+    margin-bottom: 1rem;
+    cursor: pointer;
+
 }
