--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,6 +50,10 @@
   border: 2px solid var(--orange);
 }
 
+.button:disabled{
+  pointer-events: none;
+  background: silver;
+}
 ::-webkit-scrollbar{
   display: none;
 }
