--- a/client/src/components/FollowersCard/FollowersCard.css
+++ b/client/src/components/FollowersCard/FollowersCard.css
@@ -1,12 +1,13 @@
-.FollowerCard{
+
+.FollowersCard{
     width: 100%;
     border-radius: 0.7rem;
     gap: 1rem;
     display: flex;
     flex-direction: column;
     font-size: 13px;
+    max-height: 10rem;
 }
-
 .follower{
     display: flex;
     justify-content: space-between;
@@ -18,24 +19,43 @@
     gap: 10px;
 }
 
-.followerImg{
-    width: 3rem;
-    height: 3rem;
+
+.followerImage{
+    width: 3.2rem;
+    height: 3.2rem;
     border-radius: 50%;
 }
 
 .name{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
 .name>span:nth-of-type(1){
-    font-weight: bold;align-self:flex-start;
+    font-weight: bold;
 }
 
-.fc-btn{
+
+
+.fc-button{
     height: 2rem;
-    padding-inline: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.UnfollowButton{
+    color: var(--orange);
+    border: 2px solid var(--orange);
+    cursor: pointer;
+    background: transparent;
+}
+
+
+.FollowersCard>span{
+    font-weight: bold;
+    color: orange;
+    align-self: center;
+    cursor: pointer;
 }
