--- a/client/src/components/InfoCard/InfoCard.css
+++ b/client/src/components/InfoCard/InfoCard.css
@@ -1,4 +1,5 @@
-.InfoCard{
+.InfoCard
+{
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
@@ -6,18 +7,18 @@
     padding: 1rem;
     border-radius: 1rem;
     width: 90%;
-
 }
 
-.InfoHead{
+.infoHead{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.InfoHead>div:hover{
+.infoHead>div:hover{
     cursor: pointer;
 }
+
 .logout-button{
     width: 7rem;
     height: 2rem;
