--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -1,20 +1,22 @@
-.Post{
+.Post
+{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    background-color: var(--cardColor);
     padding: 1rem;
+    background-color: var(--cardColor);
+    border-radius: 1rem;
+    gap: 1rem;
 }
 
 .Post>img{
     width: 100%;
-max-height: 20rem;
-object-fit: cover;
-border-radius: 0.5rem;
+    max-height: 20rem;
+    object-fit: cover;
+    border-radius: 0.5rem;
 }
+
 .postReact{
     display: flex;
-    gap: 1.5rem;
-    
     align-items: flex-start;
+    gap: 1.5rem;
 }
