--- a/client/src/components/PostShare/PostShare.css
+++ b/client/src/components/PostShare/PostShare.css
@@ -4,15 +4,14 @@
     background-color: var(--cardColor);
     padding: 1rem;
     border-radius: 1rem;
-
 }
+
 
 .PostShare>img{
-    height: 3rem;
-    width: 3rem;
     border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
 }
-
 .PostShare>div{
     display: flex;
     flex-direction: column;
@@ -27,28 +26,31 @@
     font-size: 17px;
     border: none;
     outline: none;
-
 }
 
-.PostOptions{
+
+
+
+
+.postOptions{
     display: flex;
     justify-content: space-around;
 }
 
-.options{
+.option{
     padding: 5px;
-    padding-inline: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     border-radius: 10px;
     display: flex;
-    justify-content: center;
     align-items: center;
-
+    justify-content: center;
+    font-size: 12px;
 }
 
-.options:hover{
+.option:hover{
     cursor: pointer;
 }
-
 .ps-button{
     padding: 5px;
     padding-left: 20px;
@@ -56,18 +58,22 @@
     font-size: 12px;
 }
 
+
 .previewImage{
     position: relative;
+    /* display: flex; */
 }
+
 .previewImage>svg{
     position: absolute;
     right: 1rem;
     top: 0.5rem;
     cursor: pointer;
 }
+
 .previewImage>img{
-    max-height: 20rem;
     width: 100%;
+    max-height: 20rem;
     object-fit: cover;
     border-radius: 0.5rem;
 }
