--- a/client/src/components/PostSide/PostSide.css
+++ b/client/src/components/PostSide/PostSide.css
@@ -1,4 +1,8 @@
-.PostSide{
+.PostSide
+{
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+    height: 100vh;
+    overflow: auto;;
 }
