--- a/client/src/components/ProfileCard/ProfileCard.css
+++ b/client/src/components/ProfileCard/ProfileCard.css
@@ -1,97 +1,97 @@
-.ProfileCard{
-    border-radius: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    gap: 1rem;
-    overflow-x: clip;
-    background-color: var(--cardColor);
+.ProfileCard {
+  border-radius: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: 1rem;
+  overflow-x: clip;
+  background-color: var(--cardColor);
 }
 
-.ProfilecardImages{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: columnd;
-    position: relative;
+/* Profile Images */
+.ProfileImages {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.ProfilecardImages>img:nth-of-type(1){
-    /* position: absolute; */
-    width: 100%;
-    /* top: 0; */
+.ProfileImages > img:nth-of-type(1) {
+  width: 100%;
+}
+.ProfileImages > img:nth-of-type(2) {
+  width: 6rem;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -3rem;
+  box-shadow: var(--profileShadow);
 }
 
-.ProfilecardImages>img:nth-of-type(2){
-    width: 6rem;
-    border-radius: 50%;
-    position: absolute;
-    bottom: -3rem;
-    box-shadow: var(--profileShadow);
+/* Profile Name */
+.ProfileName {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 3rem;
+  gap: 10px;
 }
 
-.ProfileName{
-    margin-top: 3rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+.ProfileName > span:nth-of-type(1) {
+  font-weight: bold;
 }
 
-.ProfileName>span:nth-of-type(1){
+/* Follow Status */
+.followStatus {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.75rem;
+}
+
+.followStatus > hr {
+  width: 85%;
+  border: 1px solid var(--hrColor);
+}
+
+.followStatus > div {
+  display: flex;
+  gap: 1rem;
+  width: 80%;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.follow {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  align-items: center;
+  justify-content: center;
+}
+.follow > span:nth-of-type(1) {
+  font-weight: bold;
+}
+
+.follow > span:nth-of-type(2) {
+  color: var(--gray);
+  font-size: 13px;
+}
+
+.vl {
+  height: 150%;
+  border-left: 2px solid var(--hrColor);
+}
+
+
+
+
+.ProfileCard>span
+{
     font-weight: bold;
-}
-
-.FollowStatus{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 0.75rem;
-    
-}
-
-.FollowStatus>hr{
-    width: 85%;
-    border: 1px solid var(--hrColor);
-}
-
-
-.FollowStatus>div{
-display: flex;
-justify-content: space-around;
-align-items: center;
-width: 80%;
-gap: 1rem;
-}
-
-.follow{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.4rem;
-}
-
-.follow>span:nth-of-type(1){
-    color: var(--gray);
-}
-.follow>span:nth-of-type(2){
-    color: var(--gray);
-    font-size: 13px;
-}
-.vl{
-    height: 150%;
- 
-    border-left: 2px solid var(--hrColor);
-}
-
-.ProfileCard>span{
     color: orange;
-    font-weight: bold;
     align-self: center;
     margin-bottom: 1rem;
     cursor: pointer;
-
 }
