--- a/client/src/components/rightSide/RightSide.css
+++ b/client/src/components/rightSide/RightSide.css
@@ -1,20 +1,32 @@
 .RightSide{
     display: flex;
     flex-direction: column;
-   gap: 2rem;
+    gap: 2rem;
 }
 
+
 .navIcons{
-    display: flex;
     margin-top: 1rem;
+    display: flex;
     justify-content: space-between;
+}
+
+.navIcons>a>img{
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .navIcons>img{
     width: 1.5rem;
     height: 1.5rem;
 }
-.navIcons>a>img{
-    width: 1.5rem;
-    height: 1.5rem;
+
+.navIcons>img:hover{
+    cursor: pointer;
+}
+
+.r-button{
+    height:3rem;
+    width: 80%;
+    align-self: center;
 }
