--- a/client/src/components/trendCard/TrendCard.css
+++ b/client/src/components/trendCard/TrendCard.css
@@ -4,9 +4,10 @@
     gap: 1rem;
     background-color: var(--cardColor);
     padding: 1rem;
-    padding-left: 2rem;
     border-radius: 1rem;
+    padding-left: 2rem;
 }
+
 
 .trend{
     display: flex;
@@ -14,15 +15,12 @@
     gap: 0.5rem;
 }
 
-.trend>span:nth-of-type(1){
+
+.trend>span:nth-of-type(1)
+{
     font-weight: bold;
 }
-.trend>span:nth-of-type(2){
+.trend>span:nth-of-type(2)
+{
     font-size: 13px;
-}
-
-.r-button{
-    height: 3rem;
-    width: 80%;
-    align-self: center;
 }
